# crossfire-forge

./: .env.example  .gitignore  CLAUDE.md  OPS.md  README.md  baseline.json  pyproject.toml
.claude/: stop-gate.json
.claude/agents/: code-reviewer.md  researcher.md  skeptic-verifier.md
.workflow/: README.md  autopilot-queue.json  autopilot-task-template.md
.workflow/autopilot-loop/: orchestration.md  (+3 more)
artifacts/: ac1-diagnostic-summary.json  ac2-diagnostic-summary.json  ledger-441.md  live-ac-summary.json  single-family-baseline.json
awesome-ai-workflow/: README.md
crossfire_forge/: __init__.py  ac_summary.py  ac_trials.py  aggregate.py  cli.py  env_loader.py  harness.py  hashing.py  input_loader.py  layer0.py  prompts.py  regions.json  render.py  roster.py  safety.py  schemas.py  taxonomy.py  vertex_config.py
docs/: design-note-ac2-corroboration-rule.md  design-note-ac2-fixture-remediation.md  design-note-agreement-attribution.md  design-note-no-debate-loop.md  implementation-plan-v0.4.md  spec-v0.4.md  spec-v0.5.md
memory-bank/: README.md  activeContext.md  progress.md  projectbrief.md  tasks.md  traceability.md
scripts/: run_live_ac_trials.py  verify_history_hygiene.py
tests/: test_ac_summary.py  test_ac_trials.py  test_aggregate.py  test_anthropic_models.py  test_cli_review.py  test_credential_hygiene.py  test_fixtures.py  test_harness.py  test_hashing.py  test_input_loader.py  test_layer0.py  test_prompts.py  test_providers.py  test_render.py  test_reviewers.py  test_roster.py  test_safety.py  test_schemas.py  test_skeleton.py  test_threshold.py
(+225 files in other folders)
