[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossfire-forge"
version = "0.1.0"
description = "Contract-first Epic review harness for Crossfire-Forge"
requires-python = ">=3.12"
dependencies = [
    "detect-secrets>=1.5",
    "pydantic>=2.0,<3",
    "typer>=0.9",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
crossfire-forge = "crossfire_forge.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["crossfire_forge"]
